--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+	overflow: hidden;
+}
+
 .first-container {
 	width: 400px;
 	height: 550px;
@@ -75,6 +79,17 @@
 	bottom: 0;
 	animation: rise-3 1s 4s forwards;
 }
+
+#cut_cake {
+	display: none;
+}
+
+.hidden {
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 4s, opacity 0.5s linear;
+}
+
 
 @keyframes rise-3 {
 	100% {
