--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+body {
 	overflow: hidden;
 }
 
@@ -78,6 +78,7 @@
 	right: 0;
 	bottom: 0;
 	animation: rise-3 1s 4s forwards;
+	opacity: 1;
 }
 
 #cut_cake {
@@ -89,7 +90,6 @@
 	opacity: 0;
 	transition: visibility 4s, opacity 0.5s linear;
 }
-
 
 @keyframes rise-3 {
 	100% {
@@ -233,6 +233,7 @@ body {
 img {
 	width: 100%;
 	height: 100%;
+	overflow: clip !important;
 }
 
 .wish {
