--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 .first-container {
 	width: 400px;
-	height: 550px;
+	height: 470px;
 	background-color: #ffe7f8;
 	position: absolute;
 	transform: translate(-50%, -50%);
@@ -119,7 +119,7 @@ body {
 /* second section */
 
 body {
-	background-color: #f8b8dc;
+	background-color: #f7d9ea;
 }
 
 .card {
@@ -207,12 +207,14 @@ body {
 }
 
 #first-container {
-	display: none;
+	/* display: none; */
 }
 
 .input-container {
 	position: absolute;
 	bottom: 1%;
+	right: 50%;
+	left: 50%;
 }
 
 .input-container button {
@@ -240,4 +242,760 @@ img {
 	padding: 1rem;
 	font-size: 14px;
 	color: #000046;
+}
+
+
+/* PArty popper */
+.page-container {
+	position: absolute;
+	left: 0%;
+	top: 0%;
+	right: 0%;
+	bottom: 0%;
+	overflow: hidden;
+	z-index: 9;
+}
+
+.popper-container {
+	transition: transform 1s;
+}
+
+.popper-container:hover {
+	transform-origin: center;
+	transform: translate(90px, -90px);
+	transition: transform 1s;
+}
+
+.popper-body {
+	position: relative;
+	width: 130px;
+	float: right;
+
+	&.active {
+		cursor: pointer;
+	}
+
+	&.active2 {
+		animation: 1s bodyReset;
+	}
+}
+
+.popper-container {
+	position: absolute;
+	left: -128px;
+	top: auto;
+	right: auto;
+	bottom: -136px;
+	width: 260px;
+	height: 260px;
+}
+
+.popper-paper {
+	position: absolute;
+	left: auto;
+	top: 0px;
+	right: -12px;
+	bottom: auto;
+	width: 73px;
+	-webkit-transform: translate(-16px, 11px) scale(0.5);
+	-ms-transform: translate(-16px, 11px) scale(0.5);
+	transform: translate(-16px, 11px) scale(0.5);
+
+	&.active {
+		transform: translate(1px, -8px) scale(1);
+		transition: transform .1s;
+	}
+
+	&.active2 {
+		animation: 1s paperReset;
+	}
+}
+
+.popper-string {
+	position: absolute;
+	left: 89px;
+	bottom: 97px;
+	width: 90px;
+	cursor: pointer;
+	transition: transform .3s;
+
+	&.active {
+		transform: translate(-150px, 150px);
+	}
+
+	&.active2 {
+		animation: 1s stringReset;
+		transform: translate(0px, 0px);
+	}
+}
+
+@keyframes stringReset {
+	0% {
+		transform: translate(0px, 0px);
+		opacity: 0;
+	}
+
+	50% {
+		transform: translate(-200px, 200px);
+	}
+
+	100% {
+		transform: translate(0px, 0px);
+	}
+}
+
+@keyframes bodyReset {
+	0% {
+		transform: translate(0px, 0px);
+	}
+
+	50% {
+		transform: translate(-200px, 200px);
+	}
+
+	100% {
+		transform: translate(0px, 0px);
+	}
+}
+
+@keyframes paperReset {
+	0% {
+		opacity: 1;
+		transform: translate(1px, -7px);
+	}
+
+	49% {
+		opacity: 1;
+		transform: translate(-200px, 200px);
+	}
+
+	50% {
+		opacity: 0;
+		transform: translate(-200px, 200px);
+	}
+
+	99% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+		transform: translate(0px, 0px);
+	}
+}
+
+/* Third part */
+
+span {
+	text-transform: uppercase;
+}
+
+.container {
+	width: 800px;
+	height: 420px;
+	padding: 10px;
+	margin: 0 auto;
+	position: relative;
+}
+
+.balloon {
+	width: 738px;
+	margin: 0 auto;
+	padding-top: 30px;
+	position: relative;
+}
+
+.balloon>div {
+	width: 104px;
+	height: 140px;
+	background: rgba(182, 15, 97, 0.9);
+	border-radius: 0;
+	border-radius: 80% 80% 80% 80%;
+	margin: 0 auto;
+	position: absolute;
+	padding: 10px;
+	box-shadow: inset 17px 7px 10px rgba(182, 15, 97, 0.9);
+	-webkit-transform-origin: bottom center;
+}
+
+.balloon>div:nth-child(1) {
+	background: rgba(182, 15, 97, 0.9);
+	left: 0;
+	box-shadow: inset 10px 10px 10px rgba(135, 11, 72, 0.9);
+	-webkit-animation: balloon1 6s ease-in-out infinite;
+	-moz-animation: balloon1 6s ease-in-out infinite;
+	-o-animation: balloon1 6s ease-in-out infinite;
+	animation: balloon1 6s ease-in-out infinite;
+}
+
+.balloon>div:nth-child(1):before {
+	color: rgba(182, 15, 97, 0.9);
+}
+
+.balloon>div:nth-child(2) {
+	background: rgba(242, 112, 45, 0.9);
+	left: 120px;
+	box-shadow: inset 10px 10px 10px rgba(222, 85, 14, 0.9);
+	-webkit-animation: balloon2 6s ease-in-out infinite;
+	-moz-animation: balloon2 6s ease-in-out infinite;
+	-o-animation: balloon2 6s ease-in-out infinite;
+	animation: balloon2 6s ease-in-out infinite;
+}
+
+.balloon>div:nth-child(2):before {
+	color: rgba(242, 112, 45, 0.9);
+}
+
+.balloon>div:nth-child(3) {
+	background: rgba(45, 181, 167, 0.9);
+	left: 240px;
+	box-shadow: inset 10px 10px 10px rgba(35, 140, 129, 0.9);
+	-webkit-animation: balloon4 6s ease-in-out infinite;
+	-moz-animation: balloon4 6s ease-in-out infinite;
+	-o-animation: balloon4 6s ease-in-out infinite;
+	animation: balloon4 6s ease-in-out infinite;
+}
+
+.balloon>div:nth-child(3):before {
+	color: rgba(45, 181, 167, 0.9);
+}
+
+.balloon>div:nth-child(4) {
+	background: rgba(190, 61, 244, 0.9);
+	left: 360px;
+	box-shadow: inset 10px 10px 10px rgba(173, 14, 240, 0.9);
+	-webkit-animation: balloon1 5s ease-in-out infinite;
+	-moz-animation: balloon1 5s ease-in-out infinite;
+	-o-animation: balloon1 5s ease-in-out infinite;
+	animation: balloon1 5s ease-in-out infinite;
+}
+
+.balloon>div:nth-child(4):before {
+	color: rgba(190, 61, 244, 0.9);
+}
+
+.balloon>div:nth-child(5) {
+	background: rgba(180, 224, 67, 0.9);
+	left: 480px;
+	box-shadow: inset 10px 10px 10px rgba(158, 206, 34, 0.9);
+	-webkit-animation: balloon3 5s ease-in-out infinite;
+	-moz-animation: balloon3 5s ease-in-out infinite;
+	-o-animation: balloon3 5s ease-in-out infinite;
+	animation: balloon3 5s ease-in-out infinite;
+}
+
+.balloon>div:nth-child(5):before {
+	color: rgba(180, 224, 67, 0.9);
+}
+
+.balloon>div:nth-child(6) {
+	background: rgba(242, 194, 58, 0.9);
+	left: 600px;
+	box-shadow: inset 10px 10px 10px rgba(234, 177, 15, 0.9);
+	-webkit-animation: balloon2 3s ease-in-out infinite;
+	-moz-animation: balloon2 3s ease-in-out infinite;
+	-o-animation: balloon2 3s ease-in-out infinite;
+	animation: balloon2 3s ease-in-out infinite;
+}
+
+.balloon>div:nth-child(6):before {
+	color: rgba(242, 194, 58, 0.9);
+}
+
+.balloon>div:before {
+	color: rgba(182, 15, 97, 0.9);
+	position: absolute;
+	bottom: -11px;
+	left: 52px;
+	content: "▲";
+	font-size: 1em;
+}
+
+span {
+	font-size: 4.8em;
+	color: white;
+	position: relative;
+	top: 30px;
+	left: 50%;
+	margin-left: -27px;
+}
+
+/*BALLOON 1 4*/
+@-webkit-keyframes balloon1 {
+
+	0%,
+	100% {
+		-webkit-transform: translateY(0) rotate(-6deg);
+	}
+
+	50% {
+		-webkit-transform: translateY(-20px) rotate(8deg);
+	}
+}
+
+@-moz-keyframes balloon1 {
+
+	0%,
+	100% {
+		-moz-transform: translateY(0) rotate(-6deg);
+	}
+
+	50% {
+		-moz-transform: translateY(-20px) rotate(8deg);
+	}
+}
+
+@-o-keyframes balloon1 {
+
+	0%,
+	100% {
+		-o-transform: translateY(0) rotate(-6deg);
+	}
+
+	50% {
+		-o-transform: translateY(-20px) rotate(8deg);
+	}
+}
+
+@keyframes balloon1 {
+
+	0%,
+	100% {
+		transform: translateY(0) rotate(-6deg);
+	}
+
+	50% {
+		transform: translateY(-20px) rotate(8deg);
+	}
+}
+
+/* BAllOON 2 5*/
+@-webkit-keyframes balloon2 {
+
+	0%,
+	100% {
+		-webkit-transform: translateY(0) rotate(6eg);
+	}
+
+	50% {
+		-webkit-transform: translateY(-30px) rotate(-8deg);
+	}
+}
+
+@-moz-keyframes balloon2 {
+
+	0%,
+	100% {
+		-moz-transform: translateY(0) rotate(6deg);
+	}
+
+	50% {
+		-moz-transform: translateY(-30px) rotate(-8deg);
+	}
+}
+
+@-o-keyframes balloon2 {
+
+	0%,
+	100% {
+		-o-transform: translateY(0) rotate(6deg);
+	}
+
+	50% {
+		-o-transform: translateY(-30px) rotate(-8deg);
+	}
+}
+
+@keyframes balloon2 {
+
+	0%,
+	100% {
+		transform: translateY(0) rotate(6deg);
+	}
+
+	50% {
+		transform: translateY(-30px) rotate(-8deg);
+	}
+}
+
+/* BAllOON 0*/
+@-webkit-keyframes balloon3 {
+
+	0%,
+	100% {
+		-webkit-transform: translate(0, -10px) rotate(6eg);
+	}
+
+	50% {
+		-webkit-transform: translate(-20px, 30px) rotate(-8deg);
+	}
+}
+
+@-moz-keyframes balloon3 {
+
+	0%,
+	100% {
+		-moz-transform: translate(0, -10px) rotate(6eg);
+	}
+
+	50% {
+		-moz-transform: translate(-20px, 30px) rotate(-8deg);
+	}
+}
+
+@-o-keyframes balloon3 {
+
+	0%,
+	100% {
+		-o-transform: translate(0, -10px) rotate(6eg);
+	}
+
+	50% {
+		-o-transform: translate(-20px, 30px) rotate(-8deg);
+	}
+}
+
+@keyframes balloon3 {
+
+	0%,
+	100% {
+		transform: translate(0, -10px) rotate(6eg);
+	}
+
+	50% {
+		transform: translate(-20px, 30px) rotate(-8deg);
+	}
+}
+
+/* BAllOON 3*/
+@-webkit-keyframes balloon4 {
+
+	0%,
+	100% {
+		-webkit-transform: translate(10px, -10px) rotate(-8eg);
+	}
+
+	50% {
+		-webkit-transform: translate(-15px, 20px) rotate(10deg);
+	}
+}
+
+@-moz-keyframes balloon4 {
+
+	0%,
+	100% {
+		-moz-transform: translate(10px, -10px) rotate(-8eg);
+	}
+
+	50% {
+		-moz-transform: translate(-15px, 10px) rotate(10deg);
+	}
+}
+
+@-o-keyframes balloon4 {
+
+	0%,
+	100% {
+		-o-transform: translate(10px, -10px) rotate(-8eg);
+	}
+
+	50% {
+		-o-transform: translate(-15px, 10px) rotate(10deg);
+	}
+}
+
+@keyframes balloon4 {
+
+	0%,
+	100% {
+		transform: translate(10px, -10px) rotate(-8eg);
+	}
+
+	50% {
+		transform: translate(-15px, 10px) rotate(10deg);
+	}
+}
+
+h1 {
+	position: relative;
+	top: 200px;
+	text-align: center;
+	color: white;
+	font-size: 3.5em;
+}
+
+
+.birthdaycard {
+	position: relative;
+	width: 300px;
+	height: 400px;
+	cursor: pointer;
+	transform-style: preserve-3d;
+	transform: perspective(2500px);
+	transition: 1s;
+}
+
+.birthdaycard:hover {
+	transform: perspective(2500px) rotate(5deg);
+	box-shadow: inset 100px 20px 100px rgba(0, 0, 0, 0.2), 0 10px 100px rgba(0, 0, 0, 0.4);
+}
+
+.birthdaycard:hover .cardfront {
+	transform: rotateY(-160deg);
+}
+
+.birthdaycard:hover .happy {
+	visibility: hidden;
+}
+
+.cardfront {
+	position: relative;
+	background-color: #ffffff;
+	width: 300px;
+	height: 450px;
+	overflow: hidden;
+	transform-origin: left;
+	box-shadow: inset 100px 20px 100px rgba(0, 0, 0, 0.2), 30px 0 50px rgba(0, 0, 0, 0.4);
+	transition: 0.6s;
+}
+
+.happy {
+	font-family: Tahoma, sans-serif;
+	text-align: center;
+	margin: 30px;
+	background-image: linear-gradient(120deg, #65d2f6 0%, #458dc9 100%);
+	transition: 0.1s;
+}
+
+.balloons {
+	position: absolute;
+}
+
+.balloon1,
+.balloon2,
+.balloon3,
+.balloon4 {
+	position: absolute;
+	width: 85px;
+	height: 95px;
+	border-radius: 50%;
+}
+
+.balloon1 {
+	background-color: rgba(239, 71, 111, 0.7);
+	left: -10px;
+	top: 50px;
+}
+
+.balloon2 {
+	background-color: rgba(6, 214, 160, 0.7);
+	left: 50px;
+	top: 20px;
+}
+
+.balloon3 {
+	background-color: rgba(255, 209, 102, 0.7);
+	left: 110px;
+	top: 50px;
+}
+
+.balloon4 {
+	background-color: rgba(17, 138, 178, 0.7);
+	left: 170px;
+	top: 20px;
+}
+
+.balloon1:before,
+.balloon2:before,
+.balloon3:before,
+.balloon4:before {
+	content: "";
+	position: absolute;
+	width: 1px;
+	height: 155px;
+	background-color: #ffd166;
+	top: 95px;
+	left: 43px;
+}
+
+.balloon1:after,
+.balloon2:after,
+.balloon3:after,
+.balloon4:after {
+	content: "";
+	position: absolute;
+	border-right: 7px solid transparent;
+	border-left: 7px solid transparent;
+	top: 94px;
+	left: 37px;
+}
+
+.balloon1:after {
+	border-bottom: 10px solid #ef476f;
+}
+
+.balloon2:after {
+	border-bottom: 10px solid #06d6a0;
+}
+
+.balloon3:after {
+	border-bottom: 10px solid #ffd166;
+}
+
+.balloon4:after {
+	border-bottom: 10px solid #118ab2;
+}
+
+.cardinside {
+	position: absolute;
+	background-color: #fff;
+	top: 0;
+	left: 0;
+	width: 300px;
+	height: 450px;
+	box-shadow: inset 100px 20px 100px rgba(0, 0, 0, 0.2);
+	z-index: -1;
+}
+
+p {
+	font-family: 'Brush Script MT', cursive;
+	margin: 20px;
+	color: #333;
+}
+
+.name {
+	position: absolute;
+	left: 120px;
+	top: 220px;
+	color: #333;
+}
+
+.back {
+	font-family: Tahoma, sans-serif;
+	color: #333;
+	text-align: center;
+	margin: 30px;
+	outline-color: #333;
+	outline-style: dotted;
+}
+
+footer {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	color: white;
+	background: dimgray;
+	height: 70px;
+}
+
+footer h4 {
+	padding-left: 25px;
+	padding-top: 15px;
+}
+
+.cardfront {
+	background-image: url('./IMG.jpg');
+	background-size: cover;
+}
+
+
+
+#cake {
+	display: block;
+	position: relative;
+	margin: -1em auto 0 auto;
+}
+
+/* ============================================== Candle
+*/
+
+.velas {
+	background: #ffffff;
+	border-radius: 10px;
+	position: absolute;
+	top: 357px;
+	left: 50%;
+	margin-left: -2.4px;
+	width: 5px;
+	height: 35px;
+	transform: translateY(-800px);
+	backface-visibility: hidden;
+	animation: in 300ms 6s ease-out forwards;
+}
+
+.velas:after,
+.velas:before {
+	background: rgba(255, 0, 0, 0.4);
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 2.22222222px;
+}
+
+.velas:after {
+	top: 25%;
+	left: 0;
+}
+
+.velas:before {
+	top: 45%;
+	left: 0;
+}
+
+/* ============================================== Fire
+*/
+
+.fuego {
+	border-radius: 100%;
+	position: absolute;
+	top: -20px;
+	left: 50%;
+	margin-left: -2.6px;
+	width: 6.66666667px;
+	height: 18px;
+}
+
+.fuego:nth-child(1) {
+	animation: fuego 2s 6.5s infinite;
+}
+
+.fuego:nth-child(2) {
+	animation: fuego 1.5s 6.5s infinite;
+}
+
+.fuego:nth-child(3) {
+	animation: fuego 1s 6.5s infinite;
+}
+
+.fuego:nth-child(4) {
+	animation: fuego 0.5s 6.5s infinite;
+}
+
+.fuego:nth-child(5) {
+	animation: fuego 0.2s 6.5s infinite;
+}
+
+/* ============================================== Animation Fire
+*/
+
+@keyframes fuego {
+
+	0%,
+	100% {
+		background: rgba(254, 248, 97, 0.5);
+		box-shadow: 0 0 40px 10px rgba(248, 233, 209, 0.2);
+		transform: translateY(0) scale(1);
+	}
+
+	50% {
+		background: rgba(255, 50, 0, 0.1);
+		box-shadow: 0 0 40px 20px rgba(248, 233, 209, 0.2);
+		transform: translateY(-20px) scale(0);
+	}
+}
+
+@keyframes in {
+	to {
+		transform: translateY(0);
+	}
 }
