--- a/style.css
+++ b/style.css
@@ -751,8 +751,8 @@ h1 {
 .cardfront {
 	position: relative;
 	background-color: #ffffff;
-	width: 300px;
-	height: 450px;
+	width: 100%;
+	height: 100%;
 	overflow: hidden;
 	transform-origin: left;
 	box-shadow: inset 100px 20px 100px rgba(0, 0, 0, 0.2), 30px 0 50px rgba(0, 0, 0, 0.4);
@@ -851,8 +851,8 @@ h1 {
 	background-color: #fff;
 	top: 0;
 	left: 0;
-	width: 300px;
-	height: 450px;
+	width: 100%;
+	height: 100%;
 	box-shadow: inset 100px 20px 100px rgba(0, 0, 0, 0.2);
 	z-index: -1;
 }
