--- a/style.css
+++ b/style.css
@@ -1,5 +1,44 @@
 body {
 	overflow: hidden;
+	background-color: #f7d9ea;
+}
+
+.first_section {
+	display: flex;
+	justify-content: center;
+	/* horizontally center */
+	align-items: center;
+	/* vertically center */
+	height: 100vh;
+	/* full viewport height */
+}
+
+#clockdiv {
+	font-family: sans-serif;
+	color: #fff;
+	display: inline-block;
+	font-weight: 100;
+	text-align: center;
+	font-size: 30px;
+}
+
+#clockdiv>div {
+	padding: 10px;
+	border-radius: 3px;
+	background: #2d2b31;
+	display: inline-block;
+}
+
+#clockdiv div>span {
+	padding: 15px;
+	border-radius: 3px;
+	background: #262929;
+	display: inline-block;
+}
+
+.smalltext {
+	padding-top: 5px;
+	font-size: 16px;
 }
 
 .first-container {
@@ -17,110 +56,7 @@ body {
 	background-size: cover;
 }
 
-.first-cake {
-	width: 100%;
-	position: absolute;
-	bottom: 0;
-}
-
-.first-bottom-layer,
-.first-top-layer,
-.first-middle-layer {
-	height: 80px;
-	width: 240px;
-	position: relative;
-	margin: auto;
-	background-repeat: repeat;
-	background-size: 100% 100%, 60px 100px;
-	background-position: 28px 0;
-	background-image: linear-gradient(transparent 50px,
-			#e3a953 50px,
-			#e3a953 60px,
-			transparent 60px),
-		radial-gradient(circle at 30px 5px, #713e16 30px, #eac284 31px);
-}
-
-.first-middle-layer {
-	transform: scale(0.85);
-	top: 72px;
-	animation: rise-1 2s forwards;
-}
-
-@keyframes rise-1 {
-	100% {
-		top: 7px;
-	}
-}
-
-.first-top-layer {
-	transform: scale(0.7);
-	top: 144px;
-	animation: rise-2 2s 2s forwards;
-}
-
-@keyframes rise-2 {
-	100% {
-		top: 26px;
-	}
-}
-
-.first-candle {
-	background: repeating-linear-gradient(45deg,
-			#fd3018 0,
-			#fd3018 5px,
-			#ffa89e 5px,
-			#ffa89e 10px);
-	height: 45px;
-	width: 15px;
-	position: absolute;
-	margin: auto;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	animation: rise-3 1s 4s forwards;
-	opacity: 1;
-}
-
-#cut_cake {
-	display: none;
-}
-
-.hidden {
-	visibility: hidden;
-	opacity: 0;
-	transition: visibility 4s, opacity 0.5s linear;
-}
-
-@keyframes rise-3 {
-	100% {
-		bottom: 202px;
-	}
-}
-
-.first-candle:after {
-	content: "";
-	position: absolute;
-	height: 16px;
-	width: 16px;
-	background-color: #ffee54;
-	border-radius: 0 50% 50% 50%;
-	transform: scale(0) rotate(45deg);
-	bottom: 50px;
-	left: -0.5px;
-	animation: flame 1.5s 5s forwards;
-}
-
-@keyframes flame {
-	100% {
-		transform: scale(1) rotate(45deg);
-	}
-}
-
 /* second section */
-
-body {
-	background-color: #f7d9ea;
-}
 
 .card {
 	width: 640px;
@@ -201,521 +137,6 @@ body {
 	color: #000046;
 }
 
-.inside h1 {
-	font-size: 120px;
-	line-height: 120px;
-}
-
-#first-container {
-	/* display: none; */
-}
-
-.input-container {
-	position: absolute;
-	bottom: 1%;
-	right: 50%;
-	left: 50%;
-}
-
-.input-container button {
-	padding: 10px 20px;
-	background-color: #000046;
-	color: #fff;
-	border: none;
-	border-radius: 5px;
-	font-size: 16px;
-	cursor: pointer;
-	margin-top: 10px;
-}
-
-.input-container button:hover {
-	background-color: #3c3f58;
-}
-
-img {
-	width: 100%;
-	height: 100%;
-	overflow: clip !important;
-}
-
-.wish {
-	padding: 1rem;
-	font-size: 14px;
-	color: #000046;
-}
-
-
-/* PArty popper */
-.page-container {
-	position: absolute;
-	left: 0%;
-	top: 0%;
-	right: 0%;
-	bottom: 0%;
-	overflow: hidden;
-	z-index: 9;
-}
-
-.popper-container {
-	transition: transform 1s;
-}
-
-.popper-container:hover {
-	transform-origin: center;
-	transform: translate(90px, -90px);
-	transition: transform 1s;
-}
-
-.popper-body {
-	position: relative;
-	width: 130px;
-	float: right;
-
-	&.active {
-		cursor: pointer;
-	}
-
-	&.active2 {
-		animation: 1s bodyReset;
-	}
-}
-
-.popper-container {
-	position: absolute;
-	left: -128px;
-	top: auto;
-	right: auto;
-	bottom: -136px;
-	width: 260px;
-	height: 260px;
-}
-
-.popper-paper {
-	position: absolute;
-	left: auto;
-	top: 0px;
-	right: -12px;
-	bottom: auto;
-	width: 73px;
-	-webkit-transform: translate(-16px, 11px) scale(0.5);
-	-ms-transform: translate(-16px, 11px) scale(0.5);
-	transform: translate(-16px, 11px) scale(0.5);
-
-	&.active {
-		transform: translate(1px, -8px) scale(1);
-		transition: transform .1s;
-	}
-
-	&.active2 {
-		animation: 1s paperReset;
-	}
-}
-
-.popper-string {
-	position: absolute;
-	left: 89px;
-	bottom: 97px;
-	width: 90px;
-	cursor: pointer;
-	transition: transform .3s;
-
-	&.active {
-		transform: translate(-150px, 150px);
-	}
-
-	&.active2 {
-		animation: 1s stringReset;
-		transform: translate(0px, 0px);
-	}
-}
-
-@keyframes stringReset {
-	0% {
-		transform: translate(0px, 0px);
-		opacity: 0;
-	}
-
-	50% {
-		transform: translate(-200px, 200px);
-	}
-
-	100% {
-		transform: translate(0px, 0px);
-	}
-}
-
-@keyframes bodyReset {
-	0% {
-		transform: translate(0px, 0px);
-	}
-
-	50% {
-		transform: translate(-200px, 200px);
-	}
-
-	100% {
-		transform: translate(0px, 0px);
-	}
-}
-
-@keyframes paperReset {
-	0% {
-		opacity: 1;
-		transform: translate(1px, -7px);
-	}
-
-	49% {
-		opacity: 1;
-		transform: translate(-200px, 200px);
-	}
-
-	50% {
-		opacity: 0;
-		transform: translate(-200px, 200px);
-	}
-
-	99% {
-		opacity: 0;
-	}
-
-	100% {
-		opacity: 1;
-		transform: translate(0px, 0px);
-	}
-}
-
-/* Third part */
-
-span {
-	text-transform: uppercase;
-}
-
-.container {
-	width: 800px;
-	height: 420px;
-	padding: 10px;
-	margin: 0 auto;
-	position: relative;
-}
-
-.balloon {
-	width: 738px;
-	margin: 0 auto;
-	padding-top: 30px;
-	position: relative;
-}
-
-.balloon>div {
-	width: 104px;
-	height: 140px;
-	background: rgba(182, 15, 97, 0.9);
-	border-radius: 0;
-	border-radius: 80% 80% 80% 80%;
-	margin: 0 auto;
-	position: absolute;
-	padding: 10px;
-	box-shadow: inset 17px 7px 10px rgba(182, 15, 97, 0.9);
-	-webkit-transform-origin: bottom center;
-}
-
-.balloon>div:nth-child(1) {
-	background: rgba(182, 15, 97, 0.9);
-	left: 0;
-	box-shadow: inset 10px 10px 10px rgba(135, 11, 72, 0.9);
-	-webkit-animation: balloon1 6s ease-in-out infinite;
-	-moz-animation: balloon1 6s ease-in-out infinite;
-	-o-animation: balloon1 6s ease-in-out infinite;
-	animation: balloon1 6s ease-in-out infinite;
-}
-
-.balloon>div:nth-child(1):before {
-	color: rgba(182, 15, 97, 0.9);
-}
-
-.balloon>div:nth-child(2) {
-	background: rgba(242, 112, 45, 0.9);
-	left: 120px;
-	box-shadow: inset 10px 10px 10px rgba(222, 85, 14, 0.9);
-	-webkit-animation: balloon2 6s ease-in-out infinite;
-	-moz-animation: balloon2 6s ease-in-out infinite;
-	-o-animation: balloon2 6s ease-in-out infinite;
-	animation: balloon2 6s ease-in-out infinite;
-}
-
-.balloon>div:nth-child(2):before {
-	color: rgba(242, 112, 45, 0.9);
-}
-
-.balloon>div:nth-child(3) {
-	background: rgba(45, 181, 167, 0.9);
-	left: 240px;
-	box-shadow: inset 10px 10px 10px rgba(35, 140, 129, 0.9);
-	-webkit-animation: balloon4 6s ease-in-out infinite;
-	-moz-animation: balloon4 6s ease-in-out infinite;
-	-o-animation: balloon4 6s ease-in-out infinite;
-	animation: balloon4 6s ease-in-out infinite;
-}
-
-.balloon>div:nth-child(3):before {
-	color: rgba(45, 181, 167, 0.9);
-}
-
-.balloon>div:nth-child(4) {
-	background: rgba(190, 61, 244, 0.9);
-	left: 360px;
-	box-shadow: inset 10px 10px 10px rgba(173, 14, 240, 0.9);
-	-webkit-animation: balloon1 5s ease-in-out infinite;
-	-moz-animation: balloon1 5s ease-in-out infinite;
-	-o-animation: balloon1 5s ease-in-out infinite;
-	animation: balloon1 5s ease-in-out infinite;
-}
-
-.balloon>div:nth-child(4):before {
-	color: rgba(190, 61, 244, 0.9);
-}
-
-.balloon>div:nth-child(5) {
-	background: rgba(180, 224, 67, 0.9);
-	left: 480px;
-	box-shadow: inset 10px 10px 10px rgba(158, 206, 34, 0.9);
-	-webkit-animation: balloon3 5s ease-in-out infinite;
-	-moz-animation: balloon3 5s ease-in-out infinite;
-	-o-animation: balloon3 5s ease-in-out infinite;
-	animation: balloon3 5s ease-in-out infinite;
-}
-
-.balloon>div:nth-child(5):before {
-	color: rgba(180, 224, 67, 0.9);
-}
-
-.balloon>div:nth-child(6) {
-	background: rgba(242, 194, 58, 0.9);
-	left: 600px;
-	box-shadow: inset 10px 10px 10px rgba(234, 177, 15, 0.9);
-	-webkit-animation: balloon2 3s ease-in-out infinite;
-	-moz-animation: balloon2 3s ease-in-out infinite;
-	-o-animation: balloon2 3s ease-in-out infinite;
-	animation: balloon2 3s ease-in-out infinite;
-}
-
-.balloon>div:nth-child(6):before {
-	color: rgba(242, 194, 58, 0.9);
-}
-
-.balloon>div:before {
-	color: rgba(182, 15, 97, 0.9);
-	position: absolute;
-	bottom: -11px;
-	left: 52px;
-	content: "▲";
-	font-size: 1em;
-}
-
-span {
-	font-size: 4.8em;
-	color: white;
-	position: relative;
-	top: 30px;
-	left: 50%;
-	margin-left: -27px;
-}
-
-/*BALLOON 1 4*/
-@-webkit-keyframes balloon1 {
-
-	0%,
-	100% {
-		-webkit-transform: translateY(0) rotate(-6deg);
-	}
-
-	50% {
-		-webkit-transform: translateY(-20px) rotate(8deg);
-	}
-}
-
-@-moz-keyframes balloon1 {
-
-	0%,
-	100% {
-		-moz-transform: translateY(0) rotate(-6deg);
-	}
-
-	50% {
-		-moz-transform: translateY(-20px) rotate(8deg);
-	}
-}
-
-@-o-keyframes balloon1 {
-
-	0%,
-	100% {
-		-o-transform: translateY(0) rotate(-6deg);
-	}
-
-	50% {
-		-o-transform: translateY(-20px) rotate(8deg);
-	}
-}
-
-@keyframes balloon1 {
-
-	0%,
-	100% {
-		transform: translateY(0) rotate(-6deg);
-	}
-
-	50% {
-		transform: translateY(-20px) rotate(8deg);
-	}
-}
-
-/* BAllOON 2 5*/
-@-webkit-keyframes balloon2 {
-
-	0%,
-	100% {
-		-webkit-transform: translateY(0) rotate(6eg);
-	}
-
-	50% {
-		-webkit-transform: translateY(-30px) rotate(-8deg);
-	}
-}
-
-@-moz-keyframes balloon2 {
-
-	0%,
-	100% {
-		-moz-transform: translateY(0) rotate(6deg);
-	}
-
-	50% {
-		-moz-transform: translateY(-30px) rotate(-8deg);
-	}
-}
-
-@-o-keyframes balloon2 {
-
-	0%,
-	100% {
-		-o-transform: translateY(0) rotate(6deg);
-	}
-
-	50% {
-		-o-transform: translateY(-30px) rotate(-8deg);
-	}
-}
-
-@keyframes balloon2 {
-
-	0%,
-	100% {
-		transform: translateY(0) rotate(6deg);
-	}
-
-	50% {
-		transform: translateY(-30px) rotate(-8deg);
-	}
-}
-
-/* BAllOON 0*/
-@-webkit-keyframes balloon3 {
-
-	0%,
-	100% {
-		-webkit-transform: translate(0, -10px) rotate(6eg);
-	}
-
-	50% {
-		-webkit-transform: translate(-20px, 30px) rotate(-8deg);
-	}
-}
-
-@-moz-keyframes balloon3 {
-
-	0%,
-	100% {
-		-moz-transform: translate(0, -10px) rotate(6eg);
-	}
-
-	50% {
-		-moz-transform: translate(-20px, 30px) rotate(-8deg);
-	}
-}
-
-@-o-keyframes balloon3 {
-
-	0%,
-	100% {
-		-o-transform: translate(0, -10px) rotate(6eg);
-	}
-
-	50% {
-		-o-transform: translate(-20px, 30px) rotate(-8deg);
-	}
-}
-
-@keyframes balloon3 {
-
-	0%,
-	100% {
-		transform: translate(0, -10px) rotate(6eg);
-	}
-
-	50% {
-		transform: translate(-20px, 30px) rotate(-8deg);
-	}
-}
-
-/* BAllOON 3*/
-@-webkit-keyframes balloon4 {
-
-	0%,
-	100% {
-		-webkit-transform: translate(10px, -10px) rotate(-8eg);
-	}
-
-	50% {
-		-webkit-transform: translate(-15px, 20px) rotate(10deg);
-	}
-}
-
-@-moz-keyframes balloon4 {
-
-	0%,
-	100% {
-		-moz-transform: translate(10px, -10px) rotate(-8eg);
-	}
-
-	50% {
-		-moz-transform: translate(-15px, 10px) rotate(10deg);
-	}
-}
-
-@-o-keyframes balloon4 {
-
-	0%,
-	100% {
-		-o-transform: translate(10px, -10px) rotate(-8eg);
-	}
-
-	50% {
-		-o-transform: translate(-15px, 10px) rotate(10deg);
-	}
-}
-
-@keyframes balloon4 {
-
-	0%,
-	100% {
-		transform: translate(10px, -10px) rotate(-8eg);
-	}
-
-	50% {
-		transform: translate(-15px, 10px) rotate(10deg);
-	}
-}
-
 h1 {
 	position: relative;
 	top: 200px;
@@ -760,9 +181,9 @@ h1 {
 }
 
 .happy {
-	font-family: Tahoma, sans-serif;
+	font-family: "Lucida Console", "Courier New", monospace;
 	text-align: center;
-	margin: 30px;
+	padding: 10px;
 	background-image: linear-gradient(120deg, #65d2f6 0%, #458dc9 100%);
 	transition: 0.1s;
 }
@@ -858,7 +279,7 @@ h1 {
 }
 
 p {
-	font-family: 'Brush Script MT', cursive;
+	font-family: "Lucida Console", "Courier New", monospace;
 	margin: 20px;
 	color: #333;
 }
@@ -871,7 +292,7 @@ p {
 }
 
 .back {
-	font-family: Tahoma, sans-serif;
+	font-family: "Lucida Console", "Courier New", monospace;
 	color: #333;
 	text-align: center;
 	margin: 30px;
