--- a/style.css
+++ b/style.css
@@ -563,3 +563,38 @@ eworks-container {
   opacity: 0.9;
   pointer-events: none;
 }
+
+.confirm {
+  display: none;
+}
+
+.confirm > div:first-of-type {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  top: 0px;
+  left: 0px;
+}
+
+.confirm > div:last-of-type {
+  padding: 10px 4px;
+  background: white;
+  position: absolute;
+  width: auto;
+  height: auto;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+  border: 1px solid #333;
+}
+
+.confirm > div:last-of-type div:first-of-type {
+  min-width: 150px;
+  padding: 10px;
+}
+
+.confirm > div:last-of-type div:last-of-type {
+  text-align: right;
+}
